<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_frequencyBandsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/sp_frequencyBands"
                android:layout_alignParentLeft="true"
                android:text="Frequency Band" />

            <Spinner
                android:id="@+id/sp_frequencyBands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/tv_frequencyBandsLabel"
                android:entries="@array/frequency_bands" />

            <TextView
                android:id="@+id/tv_modulationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/sp_modulation"
                android:layout_alignParentLeft="true"
                android:text="Modulation" />

           <Spinner
                android:id="@+id/sp_modulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/sp_frequencyBands"
                android:layout_toEndOf="@+id/tv_modulationLabel"
                android:entries="@array/modulation_modes" />

        <TextView
            android:id="@+id/tv_frequencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_frequency"
            android:text="Frequency (Hz)" />
        <EditText
            android:id="@+id/et_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_modulation"
            android:layout_toEndOf="@+id/tv_frequencyLabel"
            android:text="30000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_frequency"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/sb_frequencySeekBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="100"
                android:progress="40" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_frequencySeekBar"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_amp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/cb_amp_text" />

            <CheckBox
                android:id="@+id/cb_antenna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/cb_antenna_text" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vgaGainLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vga_gain_label" />

                <SeekBar
                    android:id="@+id/vgaGainSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:progress="40" />
            </LinearLayout>


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/squelchLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Squelch: %s" />

                    <SeekBar
                        android:id="@+id/squelchSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:max="110"
                        android:progress="40" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/receiveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="START RECEPTION" />
        </LinearLayout>


    </RelativeLayout>
    <Button
        android:id="@+id/transmitButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:text="Transmit" />




</LinearLayout>